# pip-simple

./: README.md  pyproject.toml
gestor_librerias/: __init__.py  core.py
